Remove outdated routing components and refactor Router to use new Registry for endpoint handling.